Add AnalyzerView for main display.
Currently the AnalyzerView can display 4 signals and allows for
zooming and scrolling. The trackpad zooming may need some more work
because it is currently pretty touchy. Also, an alternate method to
zooming should be employed for those without a trackpad.

--- a/application/ui/MainWindow.ui
+++ b/application/ui/MainWindow.ui
@@ -174,7 +174,26 @@
      </layout>
     </item>
     <item>
-     <widget class="QGraphicsView" name="graphicsView"/>
+     <widget class="AnalyzerWidget" name="analyzerWidget">
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="backgroundBrush">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>50</red>
+         <green>50</green>
+         <blue>70</blue>
+        </color>
+       </brush>
+      </property>
+      <property name="dragMode">
+       <enum>QGraphicsView::ScrollHandDrag</enum>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
@@ -201,6 +220,13 @@
    </property>
   </action>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>AnalyzerWidget</class>
+   <extends>QGraphicsView</extends>
+   <header>ui.widgets</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
