--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -22,156 +22,158 @@
      <number>0</number>
     </property>
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <property name="leftMargin">
-       <number>12</number>
-      </property>
-      <property name="topMargin">
-       <number>12</number>
-      </property>
-      <item>
-       <widget class="QLabel" name="label">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>13</pointsize>
-         </font>
-        </property>
-        <property name="text">
-         <string>Protocol:</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QComboBox" name="protocolComboBox">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>13</pointsize>
-         </font>
-        </property>
-        <property name="toolTip">
-         <string>Select a suitable communication protocol.</string>
-        </property>
-        <item>
-         <property name="text">
-          <string>General I/O</string>
+     <widget class="QWidget" name="topRowLayoutWidget" native="true">
+      <layout class="QHBoxLayout" name="topRowLayout">
+       <property name="leftMargin">
+        <number>12</number>
+       </property>
+       <property name="topMargin">
+        <number>12</number>
+       </property>
+       <item>
+        <widget class="QLabel" name="label">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
          </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>I2C</string>
+         <property name="font">
+          <font>
+           <pointsize>13</pointsize>
+          </font>
          </property>
-        </item>
-        <item>
          <property name="text">
-          <string>SPI</string>
+          <string>Protocol:</string>
          </property>
-        </item>
-        <item>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="protocolComboBox">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>13</pointsize>
+          </font>
+         </property>
+         <property name="toolTip">
+          <string>Select a suitable communication protocol.</string>
+         </property>
+         <item>
+          <property name="text">
+           <string>General I/O</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>I2C</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>SPI</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>USART</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>USART</string>
+          <string>Sample Rate:</string>
          </property>
-        </item>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>Sample Rate:</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QComboBox" name="sampleRateComboBox">
-        <property name="font">
-         <font>
-          <stylestrategy>PreferAntialias</stylestrategy>
-         </font>
-        </property>
-        <item>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="sampleRateComboBox">
+         <property name="font">
+          <font>
+           <stylestrategy>PreferAntialias</stylestrategy>
+          </font>
+         </property>
+         <item>
+          <property name="text">
+           <string>1 MS/s</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_3">
          <property name="text">
-          <string>1 MS/s</string>
+          <string>Trigger:</string>
          </property>
-        </item>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="label_3">
-        <property name="text">
-         <string>Trigger:</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QComboBox" name="triggerChannelComboBox">
-        <item>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="triggerChannelComboBox">
+         <item>
+          <property name="text">
+           <string>Channel 1</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Channel 2</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Channel 3</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Channel 4</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="triggerSlopeComboBox">
+         <item>
+          <property name="text">
+           <string>Rising</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Falling</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="startButton">
          <property name="text">
-          <string>Channel 1</string>
+          <string>Start</string>
          </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Channel 2</string>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
          </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Channel 3</string>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
          </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Channel 4</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-      <item>
-       <widget class="QComboBox" name="triggerSlopeComboBox">
-        <item>
-         <property name="text">
-          <string>Rising</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Falling</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="startButton">
-        <property name="text">
-         <string>Start</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-     </layout>
+        </spacer>
+       </item>
+      </layout>
+     </widget>
     </item>
     <item>
      <widget class="AnalyzerWidget" name="analyzerWidget">
@@ -180,6 +182,12 @@
       </property>
       <property name="mouseTracking">
        <bool>true</bool>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::NoFrame</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
       </property>
       <property name="verticalScrollBarPolicy">
        <enum>Qt::ScrollBarAlwaysOff</enum>
@@ -216,14 +224,34 @@
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="actionOpen"/>
     <addaction name="actionSave_to_Spreadsheet"/>
    </widget>
    <addaction name="menuFile"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>
   <action name="actionSave_to_Spreadsheet">
    <property name="text">
     <string>Save to Spreadsheet...</string>
+   </property>
+  </action>
+  <action name="actionOpen">
+   <property name="text">
+    <string>Open...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
    </property>
   </action>
  </widget>
