--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -164,7 +164,7 @@
          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
         </property>
         <property name="renderHints">
-         <set>QPainter::TextAntialiasing</set>
+         <set>QPainter::Antialiasing|QPainter::HighQualityAntialiasing|QPainter::TextAntialiasing</set>
         </property>
        </widget>
       </item>
