--- a/ui/AnalyzerDialog.ui
+++ b/ui/AnalyzerDialog.ui
@@ -30,7 +30,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QComboBox" name="analyzerTypeComboBox">
+      <widget class="QComboBox" name="protocolComboBox">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
          <horstretch>0</horstretch>
